# Cortex

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/core/: config.py  logging.py
app/exceptions/: handlers.py
app/middleware/: request_context.py
app/schemas/: chat.py  common.py  health.py
backend/: cli.py  main.py
backend/commands/: seed.py
backend/core/: config.py  cors.py  database.py  database_initializer.py  lifespan.py  logging.py  startup.py
backend/di/: __init__.py  services.py
backend/exceptions/: __init__.py  already_exists.py  base.py  custom.py  document_type.py  handlers.py  not_found.py  resource.py  validation.py
backend/middleware/: request_context.py
backend/migrations/: env.py
backend/models/: __init__.py  base.py  constants.py  entity.py
backend/repositories/: __init__.py  repository.py  workspace.py
backend/schemas/: document.py  health.py  knowledge.py  retrieval.py  workspace.py
backend/seeders/: __init__.py  workspace.py
backend/services/: __init__.py  base.py
backend/utils/: checksum.py
configs/environments/: dev.env  local.env  prod.env  staging.env
configs/logging/: dev.yaml  local.yaml  prod.yaml
data/sample/: cortex.txt
docs/: setup-guide.md
docs/architecture/: DATABASE_MODEL_STANDARD.md
docs/decisions/: ADR-001-python-environment.md  ADR-002-project-structure.md  ADR-003-api-first-architecture.md  ADR-004-multi-environment-configuration.md  (+26 more)
frontend/: .prettierrc  capacitor.config.ts  ionic.config.json  package-lock.json  package.json
tests/: conftest.py
(+187 files in other folders)
