[project]
name = "cortex"
version = "0.1.0"
description = "AI-powered knowledge and reasoning platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "ollama>=0.6.2",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "uvicorn>=0.48.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
