[project]
name = "cortex"
version = "0.1.0"
description = "AI-powered knowledge and reasoning platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.136.3",
    "ollama>=0.6.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.51",
    "typer>=0.26.8",
    "uvicorn>=0.48.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
